--- a/gnumed/README
+++ b/gnumed/README
@@ -1,5 +1,5 @@
 $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/README,v $
-$Revision: 1.2 $
+$Revision: 1.3 $
 
 Welcome to the GnuMed CVS tree !
 
@@ -26,7 +26,8 @@ Documentation is in:
 
 Enjoy, join the mailing list, ask questions, develop and use !
 
-Karsten Hilbert, MD
+
+Karsten Hilbert, M.D.
 
 GnuMed i18n coordinator
 Karsten.Hilbert@gmx.net
