--- a/gnumed/gnumed/test-area/ian/terry-form.tex
+++ b/gnumed/gnumed/test-area/ian/terry-form.tex
@@ -6,7 +6,7 @@
 
 \begin{document}
 \begin{page}
-\text{20}{12}{70}{\recipient}
+\text{20}{12}{70}{@RECIPIENT}
 
 \lineh{20}{40}{170} % horizontal separators
 \lineh{20}{50}{110}
@@ -30,9 +30,8 @@
 \text{91}{43}{20}{\small Your ref:}
 \text{133}{45}{55}{
 \textbf{Requesting Practitioner}\\
-\\
-\sender \\
-\senderaddress}
+@DOCTORSNAME\\
+@DOCTORSADDRESS}
 \text{22}{55}{50}{@PATIENTNAME \\
 @PATIENTADDRESS}
 \text{22}{85}{100}{
