--- a/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
+++ b/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
@@ -163,3 +163,5 @@ encounter.time=Time of Encounter
 encounter.location=Location
 
 health.issue=Health Issue
+
+vacc.entry.heading=New Vaccinations
