get some data back

--- a/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
+++ b/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
@@ -165,3 +165,5 @@ encounter.location=Location
 health.issue=Health Issue
 
 vacc.entry.heading=New Vaccinations
+
+encounter.entry.title=Encounter Entry
