--- a/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
+++ b/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
@@ -156,7 +156,7 @@ clinical.edit=clinical
 
 current.encounter=Current Encounter
 
-episode.notes=Clinical Notes
+narrative.notes=Clinical Notes
 
 encounter.time=Time of Encounter
 
@@ -167,3 +167,13 @@ health.issue=Health Issue
 vacc.entry.heading=New Vaccinations
 
 encounter.entry.title=Encounter Entry
+
+new.health.issue=new Health Issue
+
+vitals=baseline observations
+
+rfe=is RFE
+
+aoe=is AOE
+
+main.complaint=presenting complaint
