move some clinNarrative behaviour to clinRootItem, let Allergy use. Allergy update now usable. Trekking down track suggested in discussion group where a form item changes according to soap category of an item.

--- a/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
+++ b/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
@@ -179,3 +179,19 @@ aoe=is AOE
 main.complaint=presenting complaint
 
 narrative.clin_when=happened on
+
+narrative.soap=SOAP
+
+encounter.loc.consulting=consulting room
+
+consulting.loc.nursing.home=residential care facility 
+
+encounter.loc.home.visit=home visit
+
+encounter.loc.hospital=hospital
+
+allergy=allergy
+
+allergy.definite=definite
+
+allergy.substance=substance
