printable page for summary and pastnotes.

--- a/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
+++ b/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
@@ -195,3 +195,13 @@ allergy=allergy
 allergy.definite=definite
 
 allergy.substance=substance
+
+allergies.not.listed=no allergies listed.
+
+allergies.nil.known=nil known allergies
+
+vaccinations.not.listed=no vaccinations recorded
+
+patient.details=Patient Details
+
+show.printable.summary.notes=Show printable summary/past notes
