restructured data items ;  saves vaccination, allergies, narratives, demographics, vitals (which has existing types in result_type); printable summary and past notes.

--- a/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
+++ b/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
@@ -205,3 +205,12 @@ vaccinations.not.listed=no vaccinations recorded
 patient.details=Patient Details
 
 show.printable.summary.notes=Show printable summary/past notes
+
+new.issue.and.narrative.not.empty=a narrative must be entered for new health issues.
+
+vaccination.default.health.issue=Vaccinations
+
+vaccination.default.episode.description=vaccination given
+
+vaccination.default.narrative=vaccine was given.
+default.episode.description=a clinical episode
